methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:14: error: not found: value prendBicuit
  prendBicuit();
  ^